[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bartime_generator"
version = "1.0"
authors = [
    {name = "lzq", email = 'justgotpaid88@qq.com'}
]
description = 'input tick time and output the bar time'
requires-python = ">=3.9"
dependencies = [ ]

[tool.setuptools.package-dir]
bartime_generator = "bartime_generator"
